# Agentos

./: .gitignore  BLUEPRINT.md  INSTALL_APK.md  README.md
.github/workflows/: android-apk.yml
apps/backend/: pyproject.toml
apps/backend/app/: main.py
apps/backend/app/agents/: orchestrator.py
apps/backend/app/api/: routes.py
apps/backend/app/core/: config.py
apps/backend/app/models/: schemas.py
apps/backend/app/tools/: registry.py
apps/backend/app/workers/: celery_app.py
apps/gateway/: package.json
apps/mobile-pwa/: capacitor.config.ts  package-lock.json  package.json  tailwind.config.js
infra/: docker-compose.yml
scripts/android/: build_apk.sh  install_phone.sh  setup_android.sh
skills/: index.json
skills/ai/: agent_planner.py  agent_validator.py  context_trim.py  embedding_build.py  eval_suite.py  hallucination_scan.py  memory_sync.py  model_route.py  prompt_chain.py  provider_failover.py  rag_index.py  response_rank.py  safety_filter.py  token_budget.py  tool_select.py
skills/automation/: backup.py  cleanup.py  deploy.py  email_send.py  file_watch.py  form_fill.py  git_sync.py  monitor.py  notify.py  pdf_parse.py  rename_bulk.py  schedule.py  screenshot.py  web_scrape.py  zip_batch.py
skills/cad/: array.py  bom_gen.py  chamfer.py  dim_check.py  dxf_export.py  fillet.py  loft.py  mirror.py  pad.py  part_gen.py  pocket.py  shell.py  step_export.py  stl_export.py  sweep.py
skills/cnc/: cam_setup.py  contouring.py  drilling.py  facing.py  fanuc_post.py  feeds_speeds.py  fixture.py  gcode_gen.py  grbl_post.py  homing.py  nesting.py  probe.py  (+3 more)
(+78 files in other folders)
