[project]
name = "agentixos-backend"
version = "0.1.0"
description = "FastAPI backend for AgentixOS"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.0",
  "redis>=5.0.0",
  "celery[redis]>=5.4.0",
  "python-socketio>=5.11.0",
  "python-multipart>=0.0.9",
  "minio>=7.2.0",
  "supabase>=2.4.0",
  "firebase-admin>=6.5.0",
  "httpx>=0.27.0",
  "argon2-cffi>=23.1.0",
  "argon2-cffi-bindings>=21.2.0"
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000

